# Credit_ScoreCard

./: .gitignore  .gitmodules  Makefile  README.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  workspace.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
.kilocode/rules/: coding_standard.md  documentation_style.md  formatting.md  llm_utils_guide.md  naming_conventions.md  restricted_files.md  security_guidelines.md
DATASCI/raw/: README.md
DATASCI/results/: README.md
Docker/: startup.sh
ML_Project Credit_ScoreCard/: main.py  plotter.py  score.py
ML_Project Credit_ScoreCard/config/: config.py
credit_scorecard/: data.py  main.py  report.py  score.py  train.py
credit_scorecard/config/: config.py
data2/raw/: loan_data_2007_2014_clean.csv
docs/: index.md  serve_docs.sh  src_setup.sh
docs/ML_Project Credit_ScoreCard/: data.md  evaluate.md  plotter.md  predict.md  train.md  utils.md
explorations/: test.ipynb
hooks/: post_gen_init.sh
models/: credit_risk_pd_model.joblib
tests/: README.md  test_main.py
