[project]
name = "MyProject"
version = "0.1.0"
description = "PoC"
requires-python = ">=3.11"

# Black formatting
[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
      .eggs         # exclude a few common directories in the
    | .git          # root of the project
    | .hg
    | .mypy_cache
    | .tox
    | venv
    | _build
    | buck-out
    | build
    | dist
    | data
  )/
'''
[tool.autopep8]
max_line_length = 100
ignore = "E501,W6"  # or ["E501", "W6"]
in-place = true
recursive = true
list_fixes= true
aggressive = 2

# iSort
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
virtual_env = "venv"

#Development Dependencies
[project.optional-dependencies]
dev = [
  "black[jupyter]",
  "mkdocstrings[python]",
  "mkdocs-monorepo-plugin"
]